@@ -29,12 +29,14 @@ make install
 Usage:
 --
 
+Example 1.
+
+
 http
 {
  ...
         server {
                 location / {
-			set $redis_db   "0";
                         set $redis_key  "$uri?$args";
                         redis_pass      127.0.0.1:6379;
                         error_page      404 502 504 = @fallback;
@@ -47,12 +49,50 @@ http
 }
 
 
+Example 2.
+
+Capture User-Agent from an HTTP header, query to redis database
+for lookup appropriate backend.
+
+Eval module (http://www.grid.net.ru/nginx/eval.en.html) required.
+
+http
+{
+ ...
+    upstream redis {
+        server  127.0.0.1:6379;
+    }
+
+    server {
+     ...
+        location / {
+
+	    eval_escalate on;
+
+	    eval $answer {
+		set $redis_key	"$http_user_agent";
+		redis_pass	redis;
+	    }
+
+            proxy_pass $answer;
+        }
+        ...
+     }
+}
+
+
 
 Thanks to:
 --
 
 Maxim Dounin
 Vsevolod Stakhov
+Ezra Zygmuntowicz
+
+
+
+Special thanks to:
+--
 Evan Miller for his "Guide To Nginx Module Development" and "Advanced Topics
 In Nginx Module Development"
 Valery Kholodkov for his "Nginx modules development"
